# ChangeLog for net-libs/linc
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/linc/Attic/ChangeLog,v 1.20 2003/04/09 02:58:04 todd Exp $

*linc-1.0.1 (21 Jan 2003)

  08 Apr 2003; Todd Sunderlin <todd@gentoo.org> linc-1.0.1.ebuild:
  Marked stable for sparc.

  21 Feb 2003; Aron Griffis <agriffis@gentoo.org> linc-1.0.1.ebuild :
  Mark stable on alpha

  21 Jan 2003; foser <foser@gentoo.org> linc-1.0.1.ebuild :
  New version, minor dep fix

*linc-0.7.1 (09 Jan 2003)

  09 Jan 2003; Martin Holzer <mholzer@gentoo.org> linc-0.7.1.ebuild
  files/digest-linc-0.7.1 ChangeLog :
  Version bumped. Closes #13563

*linc-0.5.5 (13 Nov 2002) 

  09 Jan 2003; Martin Holzer <mholzer@gentoo.org> linc-0.5.5.ebuild :
  Removed Commentar.
  
  13 Nov 2002; Spider <spider@gentoo.org> linc-0.5.5.ebuild :
  new version in the stable tree. now, is this confusing or what?
  reinstated the USE="ssl" variable as the compile of recent ORBit2 works with
  linc built without ssl. Tested the combinations for both builds to make sure.  
 
*linc-0.7.0 (27 Oct 2002)

  03 Dec 2002; Jon Nall <nall@gentoo.org> linc-0.7.0.ebuild :
  keyworded ~ppc

  27 Oct 2002; foser <foser@gentoo.org> linc-0.7.0.ebuild :
  Gnome 2.1

  28 Oct 2002; foser <foser@gentoo.org> linc-0.7.0.ebuild :
  Re-enstate ssl USE flag, problems seem to be fixed

*linc-0.5.3 (06 Sep 2002)
  06 Sep 2002; Spider <spider@gentoo.org> linc-0.5.3.ebuild :
  new version again

*linc-0.5.2 (05 Aug 2002)
  05 Aug 2002; Spider <spider@gentoo.org> linc-0.5.2.ebuild :
  new version again

*linc-0.5.1 (29 Jul 2002)
  29 Jul 2002; Spider <spider@gentoo.org> linc-0.5.1.ebuild :
  New version 

linc-0.5.0-r2 (27 Jun 2002)
  28 Jun 2002; Spider <spider@gentoo.org> linc-0.5.0-r2.ebuild :
  libtoolizing this and ORBit2 at the same time works.  doing that now.

linc-0.5.0-r1 (27 Jun 2002)
  27 Jun 2002; Spider <spider@gentoo.org> linc-0.5.0-r1.ebuild :