@@ -1,6 +1,11 @@
 # ChangeLog for net-libs/linc
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/linc/Attic/ChangeLog,v 1.20 2003/04/09 02:58:04 todd Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/linc/Attic/ChangeLog,v 1.21 2003/05/20 12:05:40 foser Exp $
+
+*linc-1.0.2 (19 May 20030
+
+  19 May 2003; foser <foser@gentoo.org> linc-1.0.2.ebuild :
+  New version
 
 *linc-1.0.1 (21 Jan 2003)
 
